remove Kerel with wrong price

--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -101,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [
     {
@@ -134,14 +134,6 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>Kerel Kaishaku fût</th>\n",
-       "      <td>15.0</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>25.0</td>\n",
-       "      <td>Blonde</td>\n",
-       "      <td>187.5</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
        "      <th>Kasteel triple</th>\n",
        "      <td>11.0</td>\n",
        "      <td>2.2</td>\n",
@@ -150,19 +142,19 @@
        "      <td>165.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>Piraat</th>\n",
-       "      <td>10.5</td>\n",
-       "      <td>2.2</td>\n",
-       "      <td>33.0</td>\n",
-       "      <td>Ambrée</td>\n",
-       "      <td>157.5</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
        "      <th>Bush 10</th>\n",
        "      <td>10.5</td>\n",
        "      <td>2.2</td>\n",
        "      <td>33.0</td>\n",
        "      <td>Blonde</td>\n",
+       "      <td>157.5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Piraat</th>\n",
+       "      <td>10.5</td>\n",
+       "      <td>2.2</td>\n",
+       "      <td>33.0</td>\n",
+       "      <td>Ambrée</td>\n",
        "      <td>157.5</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -293,16 +285,23 @@
        "      <td>Ambrée</td>\n",
        "      <td>133.269231</td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Silly Scotch</th>\n",
+       "      <td>8.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>33.0</td>\n",
+       "      <td>Brune</td>\n",
+       "      <td>132.0</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
        "                                    Degree Price Volume       Type       Ratio\n",
-       "Kerel Kaishaku fût                    15.0   2.0   25.0     Blonde       187.5\n",
        "Kasteel triple                        11.0   2.2   33.0     Blonde       165.0\n",
-       "Piraat                                10.5   2.2   33.0     Ambrée       157.5\n",
        "Bush 10                               10.5   2.2   33.0     Blonde       157.5\n",
+       "Piraat                                10.5   2.2   33.0     Ambrée       157.5\n",
        "Kerel Kaishaku Fût                    15.0   2.5   25.0     Blonde       150.0\n",
        "Corne du bois des pendus quadruple    12.0   2.7   33.0     Blonde  146.666667\n",
        "Westmalle triple                       9.5   2.2   33.0  Trappiste       142.5\n",
@@ -318,10 +317,11 @@
        "Kasteel donker                        11.0   2.7   33.0      Brune  134.444444\n",
        "Filou                                  8.5   2.1   33.0     Blonde  133.571429\n",
        "Carolus classic                        8.5   2.1   33.0      Brune  133.571429\n",
-       "Gulden Draak 9000                     10.5   2.6   33.0     Ambrée  133.269231"
+       "Gulden Draak 9000                     10.5   2.6   33.0     Ambrée  133.269231\n",
+       "Silly Scotch                           8.0   2.0   33.0      Brune       132.0"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 76,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -339,7 +339,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [
     {
@@ -371,14 +371,6 @@
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>Kerel Kaishaku fût</th>\n",
-       "      <td>15.0</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>25.0</td>\n",
-       "      <td>Blonde</td>\n",
-       "      <td>187.5</td>\n",
-       "    </tr>\n",
        "    <tr>\n",
        "      <th>Kasteel triple</th>\n",
        "      <td>11.0</td>\n",
@@ -436,7 +428,7 @@
        "      <td>133.571429</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>Triple plaisir (la)</th>\n",
+       "      <th>Abeille</th>\n",
        "      <td>8.0</td>\n",
        "      <td>2.0</td>\n",
        "      <td>33.0</td>\n",
@@ -452,7 +444,7 @@
        "      <td>132.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>Abeille</th>\n",
+       "      <th>Triple plaisir (la)</th>\n",
        "      <td>8.0</td>\n",
        "      <td>2.0</td>\n",
        "      <td>33.0</td>\n",
@@ -484,7 +476,7 @@
        "      <td>127.232143</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>Val Dieu triple</th>\n",
+       "      <th>Chouffe houblon triple</th>\n",
        "      <td>9.0</td>\n",
        "      <td>2.4</td>\n",
        "      <td>33.0</td>\n",
@@ -492,7 +484,7 @@
        "      <td>123.75</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>Chouffe houblon triple</th>\n",
+       "      <th>Val Dieu triple</th>\n",
        "      <td>9.0</td>\n",
        "      <td>2.4</td>\n",
        "      <td>33.0</td>\n",
@@ -524,6 +516,14 @@
        "      <td>121.956522</td>\n",
        "    </tr>\n",
        "    <tr>\n",
+       "      <th>Chouffe</th>\n",
+       "      <td>8.0</td>\n",
+       "      <td>2.2</td>\n",
+       "      <td>33.0</td>\n",
+       "      <td>Blonde</td>\n",
+       "      <td>120.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
        "      <th>Omer</th>\n",
        "      <td>8.0</td>\n",
        "      <td>2.2</td>\n",
@@ -537,7 +537,6 @@
       ],
       "text/plain": [
        "                                    Degree Price Volume    Type       Ratio\n",
-       "Kerel Kaishaku fût                    15.0   2.0   25.0  Blonde       187.5\n",
        "Kasteel triple                        11.0   2.2   33.0  Blonde       165.0\n",
        "Bush 10                               10.5   2.2   33.0  Blonde       157.5\n",
        "Kerel Kaishaku Fût                    15.0   2.5   25.0  Blonde       150.0\n",
@@ -545,21 +544,22 @@
        "Goliath triple                         9.0   2.1   33.0  Blonde  141.428571\n",
        "Kerel Kaishaku                        15.0   3.5   33.0  Blonde  141.428571\n",
        "Filou                                  8.5   2.1   33.0  Blonde  133.571429\n",
-       "Triple plaisir (la)                    8.0   2.0   33.0  Blonde       132.0\n",
-       "Corne du bois des pendus 10 triple    10.0   2.5   33.0  Blonde       132.0\n",
        "Abeille                                8.0   2.0   33.0  Blonde       132.0\n",
+       "Corne du bois des pendus 10 triple    10.0   2.5   33.0  Blonde       132.0\n",
+       "Triple plaisir (la)                    8.0   2.0   33.0  Blonde       132.0\n",
        "Carolus triple d'or                    9.0   2.3   33.0  Blonde  129.130435\n",
        "Duvel                                  8.5   2.2   33.0  Blonde       127.5\n",
        "Dupont les bons voeux                  9.5   2.8   37.5  Blonde  127.232143\n",
-       "Val Dieu triple                        9.0   2.4   33.0  Blonde      123.75\n",
        "Chouffe houblon triple                 9.0   2.4   33.0  Blonde      123.75\n",
+       "Val Dieu triple                        9.0   2.4   33.0  Blonde      123.75\n",
        "To touille                             9.0   2.4   33.0  Blonde      123.75\n",
        "Malheur 10                            10.0   2.7   33.0  Blonde  122.222222\n",
        "lupulus organicus                      8.5   2.3   33.0  Blonde  121.956522\n",
+       "Chouffe                                8.0   2.2   33.0  Blonde       120.0\n",
        "Omer                                   8.0   2.2   33.0  Blonde       120.0"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 77,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -579,7 +579,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [
     {
@@ -799,7 +799,7 @@
        "Queue de charrue ambrée    5.6   2.2   33.0  Ambrée        84.0"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 78,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -819,7 +819,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [
     {
@@ -994,7 +994,7 @@
        "Chimay dorée                     4.8   2.5   33.0  Trappiste       63.36"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 79,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1014,7 +1014,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [
     {
@@ -1127,7 +1127,7 @@
        "      <td>127.5</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>Val Dieu brune</th>\n",
+       "      <th>Saint Bernardus Prior 8</th>\n",
        "      <td>8.0</td>\n",
        "      <td>2.1</td>\n",
        "      <td>33.0</td>\n",
@@ -1135,7 +1135,7 @@
        "      <td>125.714286</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>Saint Bernardus Prior 8</th>\n",
+       "      <th>Val Dieu brune</th>\n",
        "      <td>8.0</td>\n",
        "      <td>2.1</td>\n",
        "      <td>33.0</td>\n",
@@ -1222,8 +1222,8 @@
        "Malheur 12                  12.0   3.1   33.0  Brune  127.741935\n",
        "Moinette brune               8.5   5.0   75.0  Brune       127.5\n",
        "Lupulus brune                8.5   5.0   75.0  Brune       127.5\n",
-       "Val Dieu brune               8.0   2.1   33.0  Brune  125.714286\n",
        "Saint Bernardus Prior 8      8.0   2.1   33.0  Brune  125.714286\n",
+       "Val Dieu brune               8.0   2.1   33.0  Brune  125.714286\n",
        "Lupulus Hibernatus           9.0   5.5   75.0  Brune  122.727273\n",
        "Black albert                13.0   3.5   33.0  Brune  122.571429\n",
        "Charles Quint rouge rubis    8.5   2.3   33.0  Brune  121.956522\n",
@@ -1234,7 +1234,7 @@
        "Barbe noire                  9.0   2.5   33.0  Brune       118.8"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 80,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1254,7 +1254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [
     {
@@ -1335,7 +1335,7 @@
        "      <td>100.222222</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>Pêche Mel Bush Fût</th>\n",
+       "      <th>Chouffe cherry Fût</th>\n",
        "      <td>8.0</td>\n",
        "      <td>2.0</td>\n",
        "      <td>25.0</td>\n",
@@ -1343,7 +1343,7 @@
        "      <td>100.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>Chouffe cherry Fût</th>\n",
+       "      <th>Pêche Mel Bush Fût</th>\n",
        "      <td>8.0</td>\n",
        "      <td>2.0</td>\n",
        "      <td>25.0</td>\n",
@@ -1375,7 +1375,7 @@
        "      <td>90.909091</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>Lindemans tarot d'or</th>\n",
+       "      <th>Lindemans tarot noir</th>\n",
        "      <td>8.0</td>\n",
        "      <td>2.2</td>\n",
        "      <td>25.0</td>\n",
@@ -1383,7 +1383,7 @@
        "      <td>90.909091</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>Lindemans tarot noir</th>\n",
+       "      <th>Lindemans tarot d'or</th>\n",
        "      <td>8.0</td>\n",
        "      <td>2.2</td>\n",
        "      <td>25.0</td>\n",
@@ -1423,18 +1423,18 @@
        "      <td>82.5</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>Delirium red</th>\n",
-       "      <td>8.0</td>\n",
-       "      <td>7.5</td>\n",
-       "      <td>75.0</td>\n",
-       "      <td>Fruitée</td>\n",
-       "      <td>80.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
        "      <th>Lindemans tarot d'or Fût</th>\n",
        "      <td>8.0</td>\n",
        "      <td>2.5</td>\n",
        "      <td>25.0</td>\n",
+       "      <td>Fruitée</td>\n",
+       "      <td>80.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Delirium red</th>\n",
+       "      <td>8.0</td>\n",
+       "      <td>7.5</td>\n",
+       "      <td>75.0</td>\n",
        "      <td>Fruitée</td>\n",
        "      <td>80.0</td>\n",
        "    </tr>\n",
@@ -1458,23 +1458,23 @@
        "Barbar Rouge                8.0   2.4   33.0  Fruitée       110.0\n",
        "Val dieu fruitee            9.0   2.7   33.0  Fruitée       110.0\n",
        "Tête de mort red            8.2   2.7   33.0  Fruitée  100.222222\n",
-       "Pêche Mel Bush Fût          8.0   2.0   25.0  Fruitée       100.0\n",
        "Chouffe cherry Fût          8.0   2.0   25.0  Fruitée       100.0\n",
+       "Pêche Mel Bush Fût          8.0   2.0   25.0  Fruitée       100.0\n",
        "Delirium red Fût            8.0   2.0   25.0  Fruitée       100.0\n",
        "Bon secours myrtille        7.0   2.4   33.0  Fruitée       96.25\n",
        "Kasteel red Fût             8.0   2.2   25.0  Fruitée   90.909091\n",
-       "Lindemans tarot d'or        8.0   2.2   25.0  Fruitée   90.909091\n",
        "Lindemans tarot noir        8.0   2.2   25.0  Fruitée   90.909091\n",
+       "Lindemans tarot d'or        8.0   2.2   25.0  Fruitée   90.909091\n",
        "Fagnes blood orange         7.0   2.6   33.0  Fruitée   88.846154\n",
        "Kasteel rubus               7.0   2.6   33.0  Fruitée   88.846154\n",
        "Atrium Avalanche            6.8   2.6   33.0  Fruitée   86.307692\n",
        "Leffe ruby                  5.0   2.0   33.0  Fruitée        82.5\n",
-       "Delirium red                8.0   7.5   75.0  Fruitée        80.0\n",
        "Lindemans tarot d'or Fût    8.0   2.5   25.0  Fruitée        80.0\n",
+       "Delirium red                8.0   7.5   75.0  Fruitée        80.0\n",
        "Kasteel rubus Fût           7.0   2.2   25.0  Fruitée   79.545455"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 81,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1494,7 +1494,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [
     {
@@ -1624,7 +1624,7 @@
        "Arsenal                    5.4   2.9   33.0  Blanche  61.448276"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 82,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1644,7 +1644,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [
     {
@@ -1999,7 +1999,7 @@
        "Goliath blonde                   6.0   7.5   75.0     Blonde        60.0"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 83,
      "metadata": {},
      "output_type": "execute_result"
     }
