add rank in output

--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -27,7 +27,8 @@
     "        \"assiette\", \"plat\", \"régio\", \"cruche\", \"tu claques\", \"insigne\", \"verre\", \"mijole\", \"fais\", \"polo\", \"gueule\",\n",
     "        \"t-shirt\", \"15n\", \"caca\", \"affond\", \"gobelet\", \"action\", \"souper\"\n",
     "        ]\n",
-    "    if any(article_name.lower().startswith(b) for b in banned):\n",
+    "    article_name = article_name.lower()\n",
+    "    if any(article_name.startswith(b) for b in banned):\n",
     "        return False\n",
     "    return True\n",
     "\n",
@@ -89,7 +90,10 @@
     "# Sort the DataFrame by the ratio\n",
     "df = df.sort_values(by=[\"Ratio\", \"Price\", \"Volume\"], ascending=[False, True, False])\n",
     "create_dir_if_absent(f\"csv/{YEAR}\")\n",
-    "df.to_csv(f\"csv/{YEAR}/ranker.csv\")"
+    "\n",
+    "out = df.copy()\n",
+    "out.insert(0, \"Rank\", range(1, len(df) + 1))\n",
+    "out.to_csv(f\"csv/{YEAR}/ranker.csv\")"
    ]
   },
   {
@@ -2027,7 +2031,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.1"
+   "version": "3.13.7"
   }
  },
  "nbformat": 4,
