--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -2011,6 +2011,516 @@
     "big.to_csv(f\"csv/{YEAR}/75cl_ranker.csv\")\n",
     "big"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Top 50 du rat (à plus que 5° quand même (big up à Hunter))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Degree</th>\n",
+       "      <th>Price</th>\n",
+       "      <th>Volume</th>\n",
+       "      <th>Type</th>\n",
+       "      <th>Ratio</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Kerel Kaishaku Fût</th>\n",
+       "      <td>15.0</td>\n",
+       "      <td>2.5</td>\n",
+       "      <td>25.0</td>\n",
+       "      <td>Blonde</td>\n",
+       "      <td>150.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Bush 10</th>\n",
+       "      <td>10.5</td>\n",
+       "      <td>2.5</td>\n",
+       "      <td>33.0</td>\n",
+       "      <td>Blonde</td>\n",
+       "      <td>138.6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Piraat</th>\n",
+       "      <td>10.5</td>\n",
+       "      <td>2.5</td>\n",
+       "      <td>33.0</td>\n",
+       "      <td>Ambrée</td>\n",
+       "      <td>138.6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Bush 12 Fût</th>\n",
+       "      <td>12.0</td>\n",
+       "      <td>2.2</td>\n",
+       "      <td>25.0</td>\n",
+       "      <td>Ambrée</td>\n",
+       "      <td>136.363636</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Chimay rouge</th>\n",
+       "      <td>9.0</td>\n",
+       "      <td>2.2</td>\n",
+       "      <td>33.0</td>\n",
+       "      <td>Trappiste</td>\n",
+       "      <td>135.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Queue de charrue triple</th>\n",
+       "      <td>9.0</td>\n",
+       "      <td>2.3</td>\n",
+       "      <td>33.0</td>\n",
+       "      <td>Blonde</td>\n",
+       "      <td>129.130435</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Rochefort triple extra</th>\n",
+       "      <td>9.0</td>\n",
+       "      <td>2.4</td>\n",
+       "      <td>33.0</td>\n",
+       "      <td>Trappiste</td>\n",
+       "      <td>123.75</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Duvel</th>\n",
+       "      <td>8.5</td>\n",
+       "      <td>2.4</td>\n",
+       "      <td>33.0</td>\n",
+       "      <td>Blonde</td>\n",
+       "      <td>116.875</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Moinette brune</th>\n",
+       "      <td>8.5</td>\n",
+       "      <td>2.4</td>\n",
+       "      <td>33.0</td>\n",
+       "      <td>Brune</td>\n",
+       "      <td>116.875</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Triple plaisir (la)</th>\n",
+       "      <td>8.0</td>\n",
+       "      <td>2.3</td>\n",
+       "      <td>33.0</td>\n",
+       "      <td>Blonde</td>\n",
+       "      <td>114.782609</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Saint Bernardus Prior 8</th>\n",
+       "      <td>8.0</td>\n",
+       "      <td>2.3</td>\n",
+       "      <td>33.0</td>\n",
+       "      <td>Brune</td>\n",
+       "      <td>114.782609</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Jupiler Fût</th>\n",
+       "      <td>5.4</td>\n",
+       "      <td>1.2</td>\n",
+       "      <td>25.0</td>\n",
+       "      <td>Blonde</td>\n",
+       "      <td>112.5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Filou</th>\n",
+       "      <td>8.5</td>\n",
+       "      <td>2.5</td>\n",
+       "      <td>33.0</td>\n",
+       "      <td>Blonde</td>\n",
+       "      <td>112.2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Gauloise brune</th>\n",
+       "      <td>8.1</td>\n",
+       "      <td>2.4</td>\n",
+       "      <td>33.0</td>\n",
+       "      <td>Brune</td>\n",
+       "      <td>111.375</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Bertinchamps triple Fût</th>\n",
+       "      <td>8.0</td>\n",
+       "      <td>1.8</td>\n",
+       "      <td>25.0</td>\n",
+       "      <td>Blonde</td>\n",
+       "      <td>111.111111</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Cuvée des trolls</th>\n",
+       "      <td>7.0</td>\n",
+       "      <td>2.1</td>\n",
+       "      <td>33.0</td>\n",
+       "      <td>Blonde</td>\n",
+       "      <td>110.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Chimay blanche</th>\n",
+       "      <td>8.0</td>\n",
+       "      <td>2.4</td>\n",
+       "      <td>33.0</td>\n",
+       "      <td>Trappiste</td>\n",
+       "      <td>110.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Saison Dupont</th>\n",
+       "      <td>6.5</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>33.0</td>\n",
+       "      <td>Blonde</td>\n",
+       "      <td>107.25</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Lupulus blonde Fût</th>\n",
+       "      <td>8.5</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>25.0</td>\n",
+       "      <td>Blonde</td>\n",
+       "      <td>106.25</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Tripick blonde</th>\n",
+       "      <td>8.0</td>\n",
+       "      <td>2.5</td>\n",
+       "      <td>33.0</td>\n",
+       "      <td>Blonde</td>\n",
+       "      <td>105.6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Bon secours heritage</th>\n",
+       "      <td>8.0</td>\n",
+       "      <td>2.5</td>\n",
+       "      <td>33.0</td>\n",
+       "      <td>Ambrée</td>\n",
+       "      <td>105.6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Floreffe prima melior</th>\n",
+       "      <td>8.0</td>\n",
+       "      <td>2.5</td>\n",
+       "      <td>33.0</td>\n",
+       "      <td>Brune</td>\n",
+       "      <td>105.6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Beer Lambert</th>\n",
+       "      <td>8.0</td>\n",
+       "      <td>2.5</td>\n",
+       "      <td>33.0</td>\n",
+       "      <td>Blonde</td>\n",
+       "      <td>105.6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Omer</th>\n",
+       "      <td>8.0</td>\n",
+       "      <td>2.5</td>\n",
+       "      <td>33.0</td>\n",
+       "      <td>Blonde</td>\n",
+       "      <td>105.6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Tête de mort Fût</th>\n",
+       "      <td>8.1</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>25.0</td>\n",
+       "      <td>Blonde</td>\n",
+       "      <td>101.25</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Triple moine</th>\n",
+       "      <td>7.3</td>\n",
+       "      <td>2.4</td>\n",
+       "      <td>33.0</td>\n",
+       "      <td>Blonde</td>\n",
+       "      <td>100.375</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Delirium red Fût</th>\n",
+       "      <td>8.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>25.0</td>\n",
+       "      <td>Fruitée</td>\n",
+       "      <td>100.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Paranoia Fût</th>\n",
+       "      <td>8.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>25.0</td>\n",
+       "      <td>Blonde</td>\n",
+       "      <td>100.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Pêche Mel Bush Fût</th>\n",
+       "      <td>8.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>25.0</td>\n",
+       "      <td>Fruitée</td>\n",
+       "      <td>100.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Delirium Tremens Fût</th>\n",
+       "      <td>8.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>25.0</td>\n",
+       "      <td>Blonde</td>\n",
+       "      <td>100.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Chouffe cherry Fût</th>\n",
+       "      <td>8.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>25.0</td>\n",
+       "      <td>Fruitée</td>\n",
+       "      <td>100.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Saint Idesbald blonde</th>\n",
+       "      <td>6.5</td>\n",
+       "      <td>2.2</td>\n",
+       "      <td>33.0</td>\n",
+       "      <td>Blonde</td>\n",
+       "      <td>97.5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Floreffe blonde</th>\n",
+       "      <td>6.3</td>\n",
+       "      <td>2.2</td>\n",
+       "      <td>33.0</td>\n",
+       "      <td>Blonde</td>\n",
+       "      <td>94.5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Tongerlo brune nox</th>\n",
+       "      <td>6.7</td>\n",
+       "      <td>2.4</td>\n",
+       "      <td>33.0</td>\n",
+       "      <td>Brune</td>\n",
+       "      <td>92.125</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Kasteel red Fût</th>\n",
+       "      <td>8.0</td>\n",
+       "      <td>2.2</td>\n",
+       "      <td>25.0</td>\n",
+       "      <td>Fruitée</td>\n",
+       "      <td>90.909091</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>St Hubertus Blanche Fût</th>\n",
+       "      <td>7.2</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>25.0</td>\n",
+       "      <td>Blanche</td>\n",
+       "      <td>90.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Harmony</th>\n",
+       "      <td>6.0</td>\n",
+       "      <td>2.2</td>\n",
+       "      <td>33.0</td>\n",
+       "      <td>Blonde</td>\n",
+       "      <td>90.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Chouffe blanche</th>\n",
+       "      <td>6.0</td>\n",
+       "      <td>2.2</td>\n",
+       "      <td>33.0</td>\n",
+       "      <td>Blanche</td>\n",
+       "      <td>90.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Cuvée des trolls Fût</th>\n",
+       "      <td>7.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>25.0</td>\n",
+       "      <td>Blonde</td>\n",
+       "      <td>87.5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Vraie bière (la)</th>\n",
+       "      <td>6.0</td>\n",
+       "      <td>2.3</td>\n",
+       "      <td>33.0</td>\n",
+       "      <td>Blonde</td>\n",
+       "      <td>86.086957</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Vedette IPA</th>\n",
+       "      <td>6.0</td>\n",
+       "      <td>2.3</td>\n",
+       "      <td>33.0</td>\n",
+       "      <td>Blonde</td>\n",
+       "      <td>86.086957</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Lindemans tarot noir</th>\n",
+       "      <td>8.0</td>\n",
+       "      <td>2.4</td>\n",
+       "      <td>25.0</td>\n",
+       "      <td>Fruitée</td>\n",
+       "      <td>83.333333</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Amer Amer</th>\n",
+       "      <td>6.0</td>\n",
+       "      <td>2.4</td>\n",
+       "      <td>33.0</td>\n",
+       "      <td>Blonde</td>\n",
+       "      <td>82.5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Tongerlo blonde lux</th>\n",
+       "      <td>6.0</td>\n",
+       "      <td>2.4</td>\n",
+       "      <td>33.0</td>\n",
+       "      <td>Blonde</td>\n",
+       "      <td>82.5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>St Hubertus Ambrée Fût</th>\n",
+       "      <td>7.2</td>\n",
+       "      <td>2.2</td>\n",
+       "      <td>25.0</td>\n",
+       "      <td>Ambrée</td>\n",
+       "      <td>81.818182</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Delta IPA Fût</th>\n",
+       "      <td>6.5</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>25.0</td>\n",
+       "      <td>Blonde</td>\n",
+       "      <td>81.25</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Corne du bois des pendus 6 blonde</th>\n",
+       "      <td>5.9</td>\n",
+       "      <td>2.4</td>\n",
+       "      <td>33.0</td>\n",
+       "      <td>Blonde</td>\n",
+       "      <td>81.125</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Gauloise ambrée</th>\n",
+       "      <td>5.6</td>\n",
+       "      <td>2.3</td>\n",
+       "      <td>33.0</td>\n",
+       "      <td>Ambrée</td>\n",
+       "      <td>80.347826</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Lindemans tarot d'or Fût</th>\n",
+       "      <td>8.0</td>\n",
+       "      <td>2.5</td>\n",
+       "      <td>25.0</td>\n",
+       "      <td>Fruitée</td>\n",
+       "      <td>80.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Kasteel rubus Fût</th>\n",
+       "      <td>7.0</td>\n",
+       "      <td>2.2</td>\n",
+       "      <td>25.0</td>\n",
+       "      <td>Fruitée</td>\n",
+       "      <td>79.545455</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                  Degree Price Volume       Type       Ratio\n",
+       "Kerel Kaishaku Fût                  15.0   2.5   25.0     Blonde       150.0\n",
+       "Bush 10                             10.5   2.5   33.0     Blonde       138.6\n",
+       "Piraat                              10.5   2.5   33.0     Ambrée       138.6\n",
+       "Bush 12 Fût                         12.0   2.2   25.0     Ambrée  136.363636\n",
+       "Chimay rouge                         9.0   2.2   33.0  Trappiste       135.0\n",
+       "Queue de charrue triple              9.0   2.3   33.0     Blonde  129.130435\n",
+       "Rochefort triple extra               9.0   2.4   33.0  Trappiste      123.75\n",
+       "Duvel                                8.5   2.4   33.0     Blonde     116.875\n",
+       "Moinette brune                       8.5   2.4   33.0      Brune     116.875\n",
+       "Triple plaisir (la)                  8.0   2.3   33.0     Blonde  114.782609\n",
+       "Saint Bernardus Prior 8              8.0   2.3   33.0      Brune  114.782609\n",
+       "Jupiler Fût                          5.4   1.2   25.0     Blonde       112.5\n",
+       "Filou                                8.5   2.5   33.0     Blonde       112.2\n",
+       "Gauloise brune                       8.1   2.4   33.0      Brune     111.375\n",
+       "Bertinchamps triple Fût              8.0   1.8   25.0     Blonde  111.111111\n",
+       "Cuvée des trolls                     7.0   2.1   33.0     Blonde       110.0\n",
+       "Chimay blanche                       8.0   2.4   33.0  Trappiste       110.0\n",
+       "Saison Dupont                        6.5   2.0   33.0     Blonde      107.25\n",
+       "Lupulus blonde Fût                   8.5   2.0   25.0     Blonde      106.25\n",
+       "Tripick blonde                       8.0   2.5   33.0     Blonde       105.6\n",
+       "Bon secours heritage                 8.0   2.5   33.0     Ambrée       105.6\n",
+       "Floreffe prima melior                8.0   2.5   33.0      Brune       105.6\n",
+       "Beer Lambert                         8.0   2.5   33.0     Blonde       105.6\n",
+       "Omer                                 8.0   2.5   33.0     Blonde       105.6\n",
+       "Tête de mort Fût                     8.1   2.0   25.0     Blonde      101.25\n",
+       "Triple moine                         7.3   2.4   33.0     Blonde     100.375\n",
+       "Delirium red Fût                     8.0   2.0   25.0    Fruitée       100.0\n",
+       "Paranoia Fût                         8.0   2.0   25.0     Blonde       100.0\n",
+       "Pêche Mel Bush Fût                   8.0   2.0   25.0    Fruitée       100.0\n",
+       "Delirium Tremens Fût                 8.0   2.0   25.0     Blonde       100.0\n",
+       "Chouffe cherry Fût                   8.0   2.0   25.0    Fruitée       100.0\n",
+       "Saint Idesbald blonde                6.5   2.2   33.0     Blonde        97.5\n",
+       "Floreffe blonde                      6.3   2.2   33.0     Blonde        94.5\n",
+       "Tongerlo brune nox                   6.7   2.4   33.0      Brune      92.125\n",
+       "Kasteel red Fût                      8.0   2.2   25.0    Fruitée   90.909091\n",
+       "St Hubertus Blanche Fût              7.2   2.0   25.0    Blanche        90.0\n",
+       "Harmony                              6.0   2.2   33.0     Blonde        90.0\n",
+       "Chouffe blanche                      6.0   2.2   33.0    Blanche        90.0\n",
+       "Cuvée des trolls Fût                 7.0   2.0   25.0     Blonde        87.5\n",
+       "Vraie bière (la)                     6.0   2.3   33.0     Blonde   86.086957\n",
+       "Vedette IPA                          6.0   2.3   33.0     Blonde   86.086957\n",
+       "Lindemans tarot noir                 8.0   2.4   25.0    Fruitée   83.333333\n",
+       "Amer Amer                            6.0   2.4   33.0     Blonde        82.5\n",
+       "Tongerlo blonde lux                  6.0   2.4   33.0     Blonde        82.5\n",
+       "St Hubertus Ambrée Fût               7.2   2.2   25.0     Ambrée   81.818182\n",
+       "Delta IPA Fût                        6.5   2.0   25.0     Blonde       81.25\n",
+       "Corne du bois des pendus 6 blonde    5.9   2.4   33.0     Blonde      81.125\n",
+       "Gauloise ambrée                      5.6   2.3   33.0     Ambrée   80.347826\n",
+       "Lindemans tarot d'or Fût             8.0   2.5   25.0    Fruitée        80.0\n",
+       "Kasteel rubus Fût                    7.0   2.2   25.0    Fruitée   79.545455"
+      ]
+     },
+     "execution_count": 72,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "rat = df[(df[\"Degree\"] >= 5) & (df[\"Volume\"] < 75) & (df[\"Price\"] <= 2.5)]\n",
+    "rat = rat.sort_values(by=[\"Ratio\", \"Volume\"], ascending=[False, True])\n",
+    "rat.head(50)"
+   ]
   }
  ],
  "metadata": {
