new run with playwright

--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -9,58 +9,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Navigating to https://quinzaine.org...\n",
+      "Intercepting response from: https://firestore.googleapis.com/google.firestore.v1.Firestore/Listen/channel?VER=8&database=projects%2Fquinzaine-3fb2e%2Fdatabases%2F(default)&RID=83927&CVER=22&X-HTTP-Session-Id=gsessionid&zx=3c4apcahr0k2&t=1 (Status: 200)\n",
+      "Captured response body chunk (length: 54).\n",
+      "Intercepting response from: https://firestore.googleapis.com/google.firestore.v1.Firestore/Listen/channel?gsessionid=atKXgst0xFjnccK407KHAZbmbQIVNkuJVAVDVjksz-A&VER=8&database=projects%2Fquinzaine-3fb2e%2Fdatabases%2F(default)&RID=rpc&SID=E9sYyHtIWl3BbkOvOUb-FA&AID=0&CI=0&TYPE=xmlhttp&zx=qfgup4aovigi&t=1 (Status: 200)\n",
+      "Intercepting response from: https://firestore.googleapis.com/google.firestore.v1.Firestore/Listen/channel?VER=8&database=projects%2Fquinzaine-3fb2e%2Fdatabases%2F(default)&gsessionid=atKXgst0xFjnccK407KHAZbmbQIVNkuJVAVDVjksz-A&SID=E9sYyHtIWl3BbkOvOUb-FA&RID=83928&AID=5&zx=ullqmzwp1d05&t=1 (Status: 200)\n",
+      "Captured response body chunk (length: 10).\n",
+      "Captured response body chunk (length: 626969).\n",
+      "Intercepting response from: https://firestore.googleapis.com/google.firestore.v1.Firestore/Listen/channel?VER=8&database=projects%2Fquinzaine-3fb2e%2Fdatabases%2F(default)&gsessionid=atKXgst0xFjnccK407KHAZbmbQIVNkuJVAVDVjksz-A&SID=E9sYyHtIWl3BbkOvOUb-FA&RID=83929&TYPE=terminate&zx=ijrcsdij53c0 (Status: 200)\n",
+      "Intercepting response from: https://firestore.googleapis.com/google.firestore.v1.Firestore/Listen/channel?gsessionid=atKXgst0xFjnccK407KHAZbmbQIVNkuJVAVDVjksz-A&VER=8&database=projects%2Fquinzaine-3fb2e%2Fdatabases%2F(default)&RID=rpc&SID=E9sYyHtIWl3BbkOvOUb-FA&AID=8&CI=0&TYPE=xmlhttp&zx=xegp88ve2vfo&t=1 (Status: 200)\n",
+      "Response body was empty.\n",
+      "Captured response body chunk (length: 17).\n",
+      "Initial navigation complete. Waiting a bit longer for potential stream data...\n",
+      "Browser closed.\n",
+      "\n",
+      "Captured 4 response body chunks.\n",
+      "Captured Firestore response bodies saved to db/raw/2025-2026-Q1.txt\n"
+     ]
+    }
+   ],
    "source": [
     "import json\n",
     "import re\n",
     "import os\n",
     "import pandas as pd\n",
+    "import asyncio\n",
     "\n",
-    "from typing import Union, List\n",
-    "\n",
-    "def firestore_to_json(value_dict):\n",
-    "    if not isinstance(value_dict, dict):\n",
-    "        return value_dict\n",
-    "\n",
-    "    for key, value in value_dict.items():\n",
-    "        if key == \"stringValue\":\n",
-    "            return value\n",
-    "        elif key == \"integerValue\":\n",
-    "            return int(value)\n",
-    "        elif key == \"doubleValue\":\n",
-    "            return float(value)\n",
-    "        elif key == \"booleanValue\":\n",
-    "            return value\n",
-    "        elif key == \"nullValue\":\n",
-    "            return None\n",
-    "        elif key == \"timestampValue\":\n",
-    "            return value\n",
-    "        elif key == \"mapValue\":\n",
-    "            if \"fields\" in value:\n",
-    "                 return {f_key: firestore_to_json(f_val) for f_key, f_val in value[\"fields\"].items()}\n",
-    "            else:\n",
-    "                 return {}\n",
-    "        elif key == \"arrayValue\":\n",
-    "            if \"values\" in value:\n",
-    "                return [firestore_to_json(item) for item in value[\"values\"]]\n",
-    "            else:\n",
-    "                return []\n",
-    "        else:\n",
-    "            return {key: value}\n",
-    "    return None\n",
-    "\n",
-    "\n",
-    "def rename_df(df : pd.DataFrame) -> pd.DataFrame:\n",
-    "    columns = df.columns.tolist()\n",
-    "    if \"price_out\" in columns:\n",
-    "        df = df.rename(columns={'price_out': 'Price'})\n",
-    "    if \"format\" in columns:\n",
-    "        df = df.rename(columns={'format': 'Volume'})\n",
-    "    for c in columns:\n",
-    "        df = df.rename(columns={c: c.capitalize()})\n",
-    "    return df\n",
+    "from utils.download import capture_firestore_responses\n",
+    "from utils.parser import parse\n",
     "\n",
     "\n",
     "def display_top(df: pd.DataFrame, n=20) -> pd.DataFrame:\n",
@@ -71,61 +54,13 @@
     "    return out.head(n)\n",
     "\n",
     "\n",
-    "def parse(filename: str, columns_to_keep: List[str]) -> Union[pd.DataFrame, None]:\n",
-    "    with open(filename, 'r', encoding=\"utf-8\") as file:\n",
-    "        content = file.read()\n",
-    "    \n",
-    "    match = re.search(r'\\[2,\\s*\\[\\s*(\\{.*?\\})\\s*\\]\\s*\\]', content, re.DOTALL)\n",
-    "\n",
-    "    if match:\n",
-    "        json_part_string = match.group(1)\n",
-    "        try:\n",
-    "            data = json.loads(json_part_string)\n",
-    "\n",
-    "            articles_firestore_map = data.get(\"documentChange\", {}) \\\n",
-    "                                        .get(\"document\", {}) \\\n",
-    "                                        .get(\"fields\", {}) \\\n",
-    "                                        .get(\"articles\", {}) \\\n",
-    "                                        .get(\"mapValue\", {}) \\\n",
-    "                                        .get(\"fields\", {})\n",
-    "\n",
-    "            simplified_articles = {}\n",
-    "\n",
-    "            for article_id, article_data in articles_firestore_map.items():\n",
-    "                if \"mapValue\" in article_data and \"fields\" in article_data[\"mapValue\"]:\n",
-    "                    simplified_article_fields = {}\n",
-    "                    for field_name, field_value_dict in article_data[\"mapValue\"][\"fields\"].items():\n",
-    "                        simplified_article_fields[field_name] = firestore_to_json(field_value_dict)\n",
-    "                    simplified_articles[article_id] = simplified_article_fields\n",
-    "\n",
-    "            final_json_output = json.dumps(simplified_articles, indent=2, ensure_ascii=False)\n",
-    "            df = pd.DataFrame(simplified_articles).T\n",
-    "            df = df[df['article_type'] == 1]\n",
-    "            df = df.reindex(columns=columns_to_keep)\n",
-    "            df = rename_df(df)\n",
-    "            df = df.reset_index(drop=True)\n",
-    "            with open(f\"db/{filename.split('.')[0].split('/')[-1]}.json\", \"w\", encoding=\"utf-8\") as out:\n",
-    "                out.write(final_json_output)\n",
-    "\n",
-    "            return df\n",
-    "\n",
-    "        except json.JSONDecodeError as e:\n",
-    "            print(f\"Error decoding JSON part: {e}\")\n",
-    "        except KeyError as e:\n",
-    "            print(f\"Error navigating the data structure, missing key: {e}\")\n",
-    "        except Exception as e:\n",
-    "            print(f\"An unexpected error occurred: {e}\")\n",
-    "\n",
-    "    else:\n",
-    "        print(\"Could not find the relevant data structure '[2, [{...}]]' in the input string.\")\n",
-    "\n",
-    "\n",
     "def create_dir_if_absent(dir: str) -> None:\n",
     "    if not os.path.exists(dir):\n",
     "        os.makedirs(dir)\n",
     "\n",
     "\n",
     "YEAR = \"2025-2026-Q1\"\n",
+    "await capture_firestore_responses(output_file=f\"db/raw/{YEAR}.txt\")\n",
     "df = parse(f\"db/raw/{YEAR}.txt\", ['name', 'price_out', 'format', 'type', 'degree', 'available'])\n",
     "\n",
     "df = df[df[\"Available\"] == True]\n",
@@ -137,7 +72,8 @@
     "df.index = df.index + 1\n",
     "\n",
     "create_dir_if_absent(f\"csv/{YEAR}\")\n",
-    "df.to_csv(f\"csv/{YEAR}/ranker.csv\")"
+    "df.to_csv(f\"csv/{YEAR}/ranker.csv\")\n",
+    "# avg time for processing this cell : [1m10s, 1m30s]"
    ]
   },
   {
@@ -149,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 152,
    "metadata": {},
    "outputs": [
     {
@@ -225,20 +161,20 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>Bush 10</td>\n",
+       "      <td>Piraat</td>\n",
        "      <td>2.5</td>\n",
        "      <td>33</td>\n",
-       "      <td>Blonde</td>\n",
+       "      <td>Ambrée</td>\n",
        "      <td>10.5</td>\n",
        "      <td>True</td>\n",
        "      <td>138.6</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
-       "      <td>Piraat</td>\n",
+       "      <td>Bush 10</td>\n",
        "      <td>2.5</td>\n",
        "      <td>33</td>\n",
-       "      <td>Ambrée</td>\n",
+       "      <td>Blonde</td>\n",
        "      <td>10.5</td>\n",
        "      <td>True</td>\n",
        "      <td>138.6</td>\n",
@@ -403,8 +339,8 @@
        "1                      Kerel Kaishaku Fût   2.5     25     Blonde     15   \n",
        "2                          Kerel Kaishaku   3.5     33     Blonde     15   \n",
        "3                          Kasteel triple   2.6     33     Blonde     11   \n",
-       "4                                 Bush 10   2.5     33     Blonde   10.5   \n",
-       "5                                  Piraat   2.5     33     Ambrée   10.5   \n",
+       "4                                  Piraat   2.5     33     Ambrée   10.5   \n",
+       "5                                 Bush 10   2.5     33     Blonde   10.5   \n",
        "6                             Bush 12 Fût   2.2     25     Ambrée     12   \n",
        "7                            Chimay rouge   2.2     33  Trappiste      9   \n",
        "8     Corne du bois des pendus quadruple      3     33     Ambrée     12   \n",
@@ -445,7 +381,7 @@
        "20        True     116.875  "
       ]
      },
-     "execution_count": 129,
+     "execution_count": 152,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -463,7 +399,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 153,
    "metadata": {},
    "outputs": [
     {
@@ -669,7 +605,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>17</th>\n",
-       "      <td>Moinette blonde</td>\n",
+       "      <td>lupulus organicus</td>\n",
        "      <td>2.6</td>\n",
        "      <td>33</td>\n",
        "      <td>Blonde</td>\n",
@@ -679,7 +615,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>18</th>\n",
-       "      <td>lupulus organicus</td>\n",
+       "      <td>Moinette blonde</td>\n",
        "      <td>2.6</td>\n",
        "      <td>33</td>\n",
        "      <td>Blonde</td>\n",
@@ -730,8 +666,8 @@
        "14                            Malheur 10     3     33  Blonde     10   \n",
        "15                        Goliath triple   2.7     33  Blonde      9   \n",
        "16                           To touille    2.7     33  Blonde      9   \n",
-       "17                       Moinette blonde   2.6     33  Blonde    8.5   \n",
-       "18                     lupulus organicus   2.6     33  Blonde    8.5   \n",
+       "17                     lupulus organicus   2.6     33  Blonde    8.5   \n",
+       "18                       Moinette blonde   2.6     33  Blonde    8.5   \n",
        "19                         Saison Dupont     2     33  Blonde    6.5   \n",
        "20                    Lupulus blonde Fût     2     25  Blonde    8.5   \n",
        "\n",
@@ -759,7 +695,7 @@
        "20        True      106.25  "
       ]
      },
-     "execution_count": 130,
+     "execution_count": 153,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -779,7 +715,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 154,
    "metadata": {},
    "outputs": [
     {
@@ -1075,7 +1011,7 @@
        "20        True        77.0  "
       ]
      },
-     "execution_count": 131,
+     "execution_count": 154,
      "metadata": {},
      "output_type": "execute_result"
     }
